modify gradle file

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
+apply plugin: 'eclipse'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -8,7 +9,7 @@ repositories {
     jcenter()
 }
 task createJavaProject << {
-   // sourceSets*.java.srcDirs*.each { it.mkdirs() }
+    sourceSets*.java.srcDirs*.each { it.mkdirs() }
     sourceSets*.resources.srcDirs*.each { it.mkdirs()}
 }
 
