--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ task createJavaProject << {
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
+    compile 'org.springframework:spring-context:4.3.3.RELEASE'
     compile 'org.slf4j:slf4j-api:1.7.12'
     testCompile 'junit:junit:4.12'
 }
