--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,14 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
 
-// In this section you declare where to find the dependencies of your project
+
 repositories {
-    // Use 'jcenter' for resolving your dependencies.
-    // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+  mavenLocal()
+  maven { url "http://192.168.5.17:8081/archiva/repository/release" }
+  maven { url "http://192.168.5.17:8081/archiva/repository/snapshots" }
+  maven { url "http://192.168.5.17:8081/archiva/repository/internal" }
 }
+
 task createJavaProject << {
     sourceSets*.java.srcDirs*.each { it.mkdirs() }
     sourceSets*.resources.srcDirs*.each { it.mkdirs()}
@@ -16,7 +18,7 @@ task createJavaProject << {
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
-    compile 'org.springframework:spring-context:4.3.3.RELEASE'
+    compile 'org.springframework:spring-context:4.1.2.RELEASE'
     compile 'org.slf4j:slf4j-api:1.7.12'
     testCompile 'junit:junit:4.12'
 }
